--- a/frontend/src/app/features/payees/payee-list/payee-list.scss
+++ b/frontend/src/app/features/payees/payee-list/payee-list.scss
@@ -1,14 +1,8 @@
 .page-header {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
+  flex-direction: row;
   margin-bottom: 24px;
-
-  h1 {
-    margin: 0;
-    font-size: 28px;
-    font-weight: 500;
-  }
 }
 
 .loading-container {
